Correction du wrap des filtres en version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,6 @@ nav {
 }
 
 .infofilter .filters .filter {
-  min-width: 185px;
   height: 45px;
   display: flex;
   flex-direction: row;
